made changes to th ehomepages and some small design changes

--- a/frontend/src/app/groupowner/groups/groups.module.scss
+++ b/frontend/src/app/groupowner/groups/groups.module.scss
@@ -15,6 +15,10 @@ $transition-smooth: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
   min-height: 100vh;
   background: radial-gradient(circle at top left, $gray-100 0%, darken($gray-100, 5%) 100%);
   font-family: 'Inter', -apple-system, sans-serif;
+
+  button{
+    cursor: pointer;
+  }
 }
 
 // ========== HEADER ========== //
@@ -478,3 +482,5 @@ $transition-smooth: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
       cursor: not-allowed;
     }
   }
+
+  
