--- a/frontend/src/app/(auth)/login/login.module.scss
+++ b/frontend/src/app/(auth)/login/login.module.scss
@@ -11,6 +11,10 @@
   background-color: #0a0a0a;
   color: #fff;
   overflow: hidden;
+
+  a{
+    text-decoration: none;
+  }
 }
 
 .heroBackground {
