--- a/frontend/src/app/join/[groupId]/joingroup.module.scss
+++ b/frontend/src/app/join/[groupId]/joingroup.module.scss
@@ -207,3 +207,18 @@
     margin-top: 4px;
   }
   
+  .telegramInstructions {
+  margin-top: 8px;
+  font-size: 0.85rem;
+  color: #666;
+  line-height: 1.4;
+}
+
+.telegramInstructions p {
+  margin: 4px 0;
+}
+
+.telegramInstructions p:first-child {
+  color: #d32f2f; /* Red for warning */
+  font-weight: 500;
+}
